<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".information.Signup">

    <ImageView
        android:id="@+id/SignUpImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="ContentDescription,MissingConstraints" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="text|textEmailAddress|textEmailSubject"
        android:textColorHint="@color/water"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="Autofill,LabelFor,TextFields,UnusedAttribute" />

    <EditText
        android:id="@+id/SignUpPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:textColorHint="@color/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpEmail"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/SignUpConfirmPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="Confirm PW"
        android:inputType="textPassword"
        android:textColorHint="@color/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpPw"
        tools:ignore="Autofill,HardcodedText,LabelFor" />

    <ImageButton
        android:id="@+id/signupNextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:ems="10"
        android:hint="@string/yourname"
        android:inputType="textShortMessage|textPersonName|textEmailAddress"
        android:textColorHint="@color/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpConfirmPw"
        tools:ignore="Autofill,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>